tests/NormalTests/paczka1/small_fuzzy/39146460.err
Error in line 9: bYyNqJ S293 74,8
Error in line 10: svAZZ S293 9,6
Error in line 11: bYyNqJ S247 57,2
